latest versio with new config parameters, also included plot and algo for zSupp studies

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -46,7 +46,7 @@ PedestalOffset     		50
 NumberOfSamplesPedestal		50
 ### Multihit = 0 (reco single hit / channel); 1 (mulihit)
 ### In MC Multihit = 0 (reco single hit / channel); 1 (ideal multihit);  2 (mulihit with E>20 MeV for hits next to first); -2 (single hit with time compression)
-Multihit			2
+Multihit			1
 MinAmplitude			20
 AmplThrLow			10
 AmplThrHigh			20
@@ -54,7 +54,8 @@ AmplThrHigh			20
 PedestalMode                    0 
 UseIntegralCorrection           1
 UseSaturationCorrection         1
-BunchStructureSAC_runJuly       1
+BunchStructureSAC_runJuly       0
+UseZeroSuppression              5
 
 
 
@@ -77,7 +78,7 @@ ClusterDeteriorateEnergyResolution 0
 [Output]
 Hits            1
 Clusters        1
-Analog          1 #Save ECal analog signals only if Debug mode is enabled
+Analog          0 #Save ECal analog signals only if Debug mode is enabled
 
 [EnergyCalibration]
 #UseCalibration = 0 or >0; either calibration is used or not 
