--- a/PadmeReco/config/HEPVeto.cfg
+++ b/PadmeReco/config/HEPVeto.cfg
@@ -27,17 +27,23 @@ NumberOfSamplesPedestal		50
 Multihit			1
 #MinAmplitude			30
 MinAmplitude			20
-AmplThrLow			10
-AmplThrHigh			20
+#AmplThrLow			10
+#AmplThrHigh			20
+AmplThrLow			6
+AmplThrHigh			6
 UsePulseProcessing		0
 
 [RECOCLUSTER]
-ClusterDeltaTimeMax            5.
+#ClusterDeltaTimeMax            5.
+ClusterDeltaTimeMax            4.
 ClusterDeltaCellMax            2
-ClusterEnergyThresholdForHit   2.
-ClusterEnergyThresholdForSeed  3.
+#ClusterEnergyThresholdForHit   2.
+#ClusterEnergyThresholdForSeed  3.
+ClusterEnergyThresholdForHit   0.1
+ClusterEnergyThresholdForSeed  0.1
 ClusterTLowForHit              -100.
-ClusterTHighForHit              180.
+#ClusterTHighForHit              180.
+ClusterTHighForHit              300.
 
 [Output]
 Hits            1
@@ -77,39 +83,75 @@ FingerSizeZ  10.
 
 
 
+#[TimeCalibration]
+#Common_t0  0.
+#Common_t0MC -2
+#t0_0 34.8128
+#t0_1 34.8025
+#t0_2 34.6514
+#t0_3 34.4709
+#t0_4 34.9766
+#t0_5 34.5708
+#t0_6 34.3492
+#t0_7 34.5414
+#t0_8 34.9215
+#t0_9 34.6039
+#t0_10 34.1277
+#t0_11 34.1221
+#t0_12 34.3008
+#t0_13 34.4291
+#t0_14 33.6032
+#t0_15 33.1826
+#t0_16 33.8333
+#t0_17 33.493
+#t0_18 34.1034
+#t0_19 34.3193
+#t0_20 33.7527
+#t0_21 33.6446
+#t0_22 34.1826
+#t0_23 34.1669
+#t0_24 33.4531
+#t0_25 33.3662
+#t0_26 33.4303
+#t0_27 33.5797
+#t0_28 32.9559
+#t0_29 33.329
+#t0_30 33.2979
+#t0_31 32.8827
+
+
 [TimeCalibration]
 Common_t0  0.
 Common_t0MC -2
-t0_0 34.8128
-t0_1 34.8025
-t0_2 34.6514
-t0_3 34.4709
-t0_4 34.9766
-t0_5 34.5708
-t0_6 34.3492
-t0_7 34.5414
-t0_8 34.9215
-t0_9 34.6039
-t0_10 34.1277
-t0_11 34.1221
-t0_12 34.3008
-t0_13 34.4291
-t0_14 33.6032
-t0_15 33.1826
-t0_16 33.8333
-t0_17 33.493
-t0_18 34.1034
-t0_19 34.3193
-t0_20 33.7527
-t0_21 33.6446
-t0_22 34.1826
-t0_23 34.1669
-t0_24 33.4531
-t0_25 33.3662
-t0_26 33.4303
-t0_27 33.5797
-t0_28 32.9559
-t0_29 33.329
-t0_30 33.2979
-t0_31 32.8827
-
+t0_0 34.6997
+t0_1 34.7105
+t0_2 34.5571
+t0_3 34.4223
+t0_4 34.9339
+t0_5 34.5241
+t0_6 34.3252
+t0_7 34.5126
+t0_8 34.9953
+t0_9 34.6834
+t0_10 34.2786
+t0_11 34.3644
+t0_12 34.5377
+t0_13 34.8828
+t0_14 34.0645
+t0_15 33.984
+t0_16 33.6928
+t0_17 33.3411
+t0_18 33.9573
+t0_19 34.2143
+t0_20 33.6186
+t0_21 33.5044
+t0_22 34.0851
+t0_23 34.0786
+t0_24 33.4071
+t0_25 33.3562
+t0_26 33.485
+t0_27 33.7115
+t0_28 33.2015
+t0_29 33.662
+t0_30 33.8984
+t0_31 33.6268
