--- a/PadmeReco/config/Target.cfg
+++ b/PadmeReco/config/Target.cfg
@@ -20,10 +20,10 @@ VoltageBin	0.000244
 
 [RECO]
 SignalWindow       		1000
-SignalPreSamples		200
-SignalPostSamples		700
+SignalPreSamples		120
+SignalPostSamples		600
 PedestalOffset     		0
-NumberOfSamplesPedestal		200
+NumberOfSamplesPedestal		120
 Multihit			0
 MinAmplitude			0
 AmplThrLow			0
@@ -64,7 +64,8 @@ Common_EnergyScale 1.
 AverageGain     1300.0
 
 # HV sign allow to revert the charge sign for the correct (X or Y) view and have always a positive beam profile
-HVsign    	   -1
+#HVsign    	   -1
+HVsign    	   0 #for data Taking September'20
 
 # channel by channel energy scale /// default will be 1. for all channels  
 ES_01  1.
@@ -109,7 +110,8 @@ Gain_32  1372
 
 
 # Decide whether CommonModeNoise will be subtructed (1=default) or not (0)
-CommonModeNoise_Subtraction 1
+#CommonModeNoise_Subtraction 1
+CommonModeNoise_Subtraction 0  #septeber'20 data Taking
 
 # ChannelId to be used to compute common noise for the X view (1=default)
 CMNS_offBeamIdForX 1
