introducing the possibility to smear time and energy of ECal in MC digit to hit conversion

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -46,7 +46,7 @@ PedestalOffset     		50
 NumberOfSamplesPedestal		50
 ### Multihit = 0 (reco single hit / channel); 1 (mulihit)
 ### In MC Multihit = 0 (reco single hit / channel); 1 (ideal multihit);  2 (mulihit with E>20 MeV for hits next to first); -2 (single hit with time compression)
-Multihit			1
+Multihit			2
 MinAmplitude			20
 AmplThrLow			10
 AmplThrHigh			20
@@ -56,6 +56,8 @@ UseIntegralCorrection           1
 UseSaturationCorrection         1
 BunchStructureSAC_runJuly       0
 UseZeroSuppression              5
+SmearMCHitEnResolution          0
+SmearMCHitTimeResolution        0
 
 
 
@@ -73,7 +75,8 @@ PedestalMode                    0
 ClusterizationAlgo    1
 #Timing algorithm     0 [Weighted average],  1 [Time of the SEED]  
 ClusterTimeAlgo	      1
-ClusterDeteriorateEnergyResolution 0
+# extra smearing of cluster energy - to be used only for MC - just for specific tests => default 0 
+SmearMCClusterEnergyResolution 0
 
 [Output]
 Hits            1
