--- a/PadmeReco/config/SAC_tuning2019.cfg
+++ b/PadmeReco/config/SAC_tuning2019.cfg
@@ -27,6 +27,7 @@ Multihit			1
 MinAmplitude			40
 AmplThrLow			10
 AmplThrHigh			20
+DigitizationTimeWindowForMC     4.0
 
 [RECOCLUSTER]
 ClusterDeltaTimeMax            1.
