--- a/PadmeReco/config/EVeto.cfg
+++ b/PadmeReco/config/EVeto.cfg
@@ -31,6 +31,8 @@ MinAmplitude			20
 AmplThrLow			6
 AmplThrHigh			6
 UsePulseProcessing		0
+SigmaNoiseForMC                 0.4
+DigitizationTimeWindowForMC    17.0
 
 
 [RECOCLUSTER]
