--- a/PadmeReco/config/HEPVeto_tuning2019.cfg
+++ b/PadmeReco/config/HEPVeto_tuning2019.cfg
@@ -32,6 +32,8 @@ MinAmplitude			20
 AmplThrLow			6
 AmplThrHigh			6
 UsePulseProcessing		0
+SigmaNoiseForMC                 0.4
+DigitizationTimeWindowForMC    17.0
 
 [RECOCLUSTER]
 #ClusterDeltaTimeMax            5.
