remove printout in muoltihit ECal reco

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -75,8 +75,8 @@ PedestalMode                    0
 ClusterizationAlgo    1
 #Timing algorithm     0 [Weighted average],  1 [Time of the SEED]  
 ClusterTimeAlgo	      1
-# extra smearing of cluster energy - to be used only for MC - just for specific tests => default 0 
-SmearMCClusterEnergyResolution 0
+### extra smearing of cluster energy - to be used only for MC - just for specific tests => default 0 
+###SmearMCClusterEnergyResolution 0 .... to be removed
 
 [Output]
 Hits            1
