Target nPOT calculation for Run1 or Run 2 based on configuration - Target.cfg to be chosen

--- a/PadmeReco/config/Target_tuning2019.cfg
+++ b/PadmeReco/config/Target_tuning2019.cfg
@@ -29,6 +29,7 @@ MinAmplitude			0
 AmplThrLow			0
 AmplThrHigh			10000
 UseAbsSignals			1
+RunIInPOTcalc                   0
 
 [Output]
 Hits            1
