Fix Target configuration for 2019 data

--- a/PadmeReco/config/Target_tuning2019.cfg
+++ b/PadmeReco/config/Target_tuning2019.cfg
@@ -65,8 +65,8 @@ Common_EnergyScale 1.
 AverageGain     1300.0
 
 # HV sign allow to revert the charge sign for the correct (X or Y) view and have always a positive beam profile
-#HVsign    	   -1
-HVsign    	   0 #for data Taking September'20
+HVsign    	   -1
+#HVsign    	   0 #for data Taking September'20
 
 # channel by channel energy scale /// default will be 1. for all channels  
 ES_01  1.
@@ -111,8 +111,8 @@ Gain_32  1372
 
 
 # Decide whether CommonModeNoise will be subtructed (1=default) or not (0)
-#CommonModeNoise_Subtraction 1
-CommonModeNoise_Subtraction 0  #septeber'20 data Taking
+CommonModeNoise_Subtraction 1
+#CommonModeNoise_Subtraction 0  #septeber'20 data Taking
 
 # ChannelId to be used to compute common noise for the X view (1=default)
 CMNS_offBeamIdForX 1
