PadmeReco: added parameter for ECal multihit template

--- a/PadmeReco/config.template/ECal.cfg
+++ b/PadmeReco/config.template/ECal.cfg
@@ -58,6 +58,7 @@ BunchStructureSAC_runJuly       0
 UseZeroSuppression              5
 SmearMCHitEnResolution          0
 SmearMCHitTimeResolution        0
+MHTemplateFile                  config/BGOwaveformTemplate.txt
 
 
 
