--- a/PadmeReco/config.template/SAC.cfg
+++ b/PadmeReco/config.template/SAC.cfg
@@ -45,7 +45,8 @@ Clusters        1
 
 [EnergyCalibration]
 Common_EnergyScale 1.
-CalibrationFile    7
+#CalibrationFile    7
+CalibrationFile    config/Calibration/SAC_EnergyCalibration_7.txt
 # Decide whether Channel by Channel gains (1=default) or average gain equal to 1 (0) must be used  
 UseIndividualChannelGain 1
 
