PadmeReco: create mkconfig directory

--- a/PadmeReco/GNUmakefile
+++ b/PadmeReco/GNUmakefile
@@ -15,7 +15,7 @@ CPPFLAGS += $(addprefix -I,$(addsuffix /include,$(SUBDIRS)))
 CPPFLAGS += -IRecoBase/include -g
 
 
-include ./config/global.gmk
+include ./mkconfig/global.gmk
 
 # Define libraries used for the creation of the final executable
 LIBS += -Llib -lPadmeReco$(STATIC) 
