OnlineMonitor: added ADC template config file

--- a/OnlineMonitor/config.template/OnlineMonitor.cfg
+++ b/OnlineMonitor/config.template/OnlineMonitor.cfg
@@ -1,5 +1,6 @@
 [CONFIGFILE]
 Target  config/Target.cfg
+ADC     config/ADC.cfg
 Trigger config/Trigger.cfg
 ECal    config/ECal.cfg
 SAC     config/SAC.cfg
@@ -9,6 +10,7 @@ HEPVeto config/HEPVeto.cfg
 
 [ANALYZE]
 Trigger 1
+ADC     1
 Target  0
 ECal    0
 SAC     1
