Capacitor pedestal calibration
Linear regression sums are collected inside PadmeReco and are exported
to a json file. This behaveour can be enabled with `GenADCCellCalib`
keyword in PadmeReconstruction.cfg under `[RUNNINGMODE]` group. The
produced sums need to be interpreted by
utils/v1742-offline-cell-calib-linear-regression.py -- poly5 method is
slowest but provides best results.  On a second iteration, the
calibration data can be provided to the reconstruction via
`ADCCellCalibData` keyword again under `[RUNNINGMODE]` group

Fixes #238

--- a/PadmeReco/GNUmakefile
+++ b/PadmeReco/GNUmakefile
@@ -25,6 +25,7 @@ LIBS += -LRecoBase/lib -lRecoBase$(STATIC)
 LIBS += -L$(PADMEROOT)/lib -lPadmeRoot
 #LIBS += -L/usr/lib64/mysql -lmysqlclient
 LIBS += -Llib -lPadmeReco$(STATIC)
+LIBS += -ljsoncpp
 
 
 #EXTRALIBS += -LEventDisplay/lib -lEventDisplay$(STATIC) -lEve -lGeom -lRGL -lFTGL -lGui -lGed -lTreePlayer -lEG 
