--- a/PadmeReco/config.template/EVeto.cfg
+++ b/PadmeReco/config.template/EVeto.cfg
@@ -17,6 +17,7 @@ InputImpedance	50
 VoltageBin	0.000244
 
 [RECO]
+ADCCellCalib                     1
 SignalWindow       		150
 SignalPreSamples		30
 SignalPostSamples		120
