--- a/PadmeReco/config.template/PadmeReconstruction.cfg
+++ b/PadmeReco/config.template/PadmeReconstruction.cfg
@@ -24,6 +24,9 @@ Monitor     0
 #------------------
 Cosmics     0
 Debug       0
+#GenADCCellCalib adc-raw-calib.json
+#ADCCellCalibData poly5.json
+#FillADCCellCalibHists 1
 
 [RECOCONFIG]
 ECal    config/ECal.cfg
