Python interface for raw data
Here is an example how to use it:
```
import pypadme_raw as pdm
import matplotlib.pyplot as plt
raw = pdm.PadmeRaw('/data/daq_0030355/run_0030355_20200917_113409_lvl1_00_000.root')
for evt in raw[:20]:
    plt.plot(evt.get_board(12).get_channel(20))
plt.show()
```

Padme environment should be sourced before executing python.

--- a/PadmeRoot/Makefile
+++ b/PadmeRoot/Makefile
@@ -8,6 +8,7 @@
 
 # Set name of library
 LIBNAME := PadmeRoot
+PYRAWLIBNAME := PyPadmeRoot
 
 # Define directories for different file types
 SDIR	= src
@@ -41,10 +42,14 @@ OBJECTS  := $(addprefix $(ODIR)/,$(notdir $(SOURCES:.cc=.o))) $(ODIR)/Persistenc
 
 # Define comlete library name
 LIBRARY := $(LDIR)/lib$(LIBNAME).so
+PYRAWLIBRARY := $(LDIR)/lib$(PYRAWLIBNAME).so
 
 #########################################################################
 
-all: $(LIBNAME)
+all: $(LIBNAME) $(PYRAWLIBNAME)
+
+$(PYRAWLIBNAME): $(LIBNAME)
+	$(CXX) $(ROOTLDFLAGS) $(ROOTLIBS) $(CXXFLAGS) -l$(LIBNAME) -fPIC -shared -o $(PYRAWLIBRARY) $(wildcard python/*.cc)
 
 $(LIBNAME) : $(DEPS) $(OBJECTS)
 	$(CXX) -shared -o $(LIBRARY) $(ROOTLDFLAGS) $(CXXFLAGS) $(OBJECTS)
@@ -72,12 +77,15 @@ cleanall:
 	@echo Cleaning all...
 	rm -f $(ODIR)/*.o
 	rm -f $(LIBRARY)
+	rm -f $(PYRAWLIBRARY)
 	rm -f PersistencyDict.*
 
 try:
 	@echo Current make parameters:
 	@echo LIBNAME = $(LIBNAME)
+	@echo PYRAWLIBNAME = $(PYRAWLIBNAME)
 	@echo LIBRARY = $(LIBRARY)
+	@echo PYRAWLIBRARY = $(PYRAWLIBRARY)
 	@echo CXXFLAGS = $(CXXFLAGS)
 	@echo LIBS = $(LIBS)
 	@echo SOURCES = $(SOURCES)
