Deconvolution based reconstruction
Based on the knowleadge of the signal shape, the algorithm is able to
calculate times and amplitudes of the hits even in pileuped channels.
Deconvolution arrays are calculated for Vetos and ECal.

--- a/PadmeReco/GNUmakefile
+++ b/PadmeReco/GNUmakefile
@@ -18,7 +18,7 @@ CPPFLAGS += -IRecoBase/include -g
 include ./mkconfig/global.gmk
 
 # Define libraries used for the creation of the final executable
-LIBS += -Llib -lPadmeReco$(STATIC) 
+LIBS += -Llib -lPadmeReco$(STATIC) -lgsl -lgslcblas
 LIBS += $(addprefix -L,$(addsuffix /lib,$(SUBDIRS))) $(addprefix -l,$(addsuffix Reco$(STATIC),$(SUBDIRS)))
 #LIBS += -LService/lib -lService$(STATIC)
 LIBS += -LRecoBase/lib -lRecoBase$(STATIC)
