New Digitizer channel PVeto, including debug histos and structures

--- a/PadmeReco/config/PVeto.cfg
+++ b/PadmeReco/config/PVeto.cfg
@@ -17,17 +17,14 @@ InputImpedance	50
 VoltageBin	0.000244
 
 [RECO]
-SignalWindow                   151
-SignalPreSamples               30
-SignalPostSamples              120
-PedestalOffset     		50
-NumberOfSamplesPedestal		50
-#Multihit [0- SingleHit, 1- Multihit with TSpectrum]
-Multihit			1
-MinAmplitude			20
-AmplThrLow			10
-AmplThrHigh			20
+NumberOfSamplesPedestal		150#Beth 24/2/22 copied from ClacPedestal method in 211019padme-fw. Is it a good number?
+AmplThrLow			8#Beth 21/2/22, copied from 211019padme-fw #10
+AmplThrHigh			8#Beth 21/2/22, copied from 211019padme-fw #20
 UsePulseProcessing		0
+ChannelEqualisation		1
+DerivPoints			15
+PeakSearchWidth			5
+ZeroSuppression			5#Beth 21/3/22 added
 
 [TimeCalibration]
 Common_t0  37.24
@@ -233,7 +230,8 @@ ClusterTHighForHit              300.
 [Output]
 Hits            1
 Clusters        1
-
+Analog		0
+TotalAnalogs	100 #Beth 23/2/22: total number of analog signals to write to PVetoRecoAn.root
 
 [GEOMETRY]
 ComputeFromPrimaryNumbers 1
