Added derivative amplitude -> energy conversion and hit energy plots

--- a/PadmeReco/config/PVeto.cfg
+++ b/PadmeReco/config/PVeto.cfg
@@ -18,13 +18,16 @@ VoltageBin	0.000244
 
 [RECO]
 NumberOfSamplesPedestal		150#Beth 24/2/22 copied from ClacPedestal method in 211019padme-fw. Is it a good number?
-AmplThrLow			8#Beth 21/2/22, copied from 211019padme-fw #10
-AmplThrHigh			8#Beth 21/2/22, copied from 211019padme-fw #20
+#AmpThrLow is the minimum peak height allowed for a hit
+AmplThrLow			8#Beth 21/2/22, copied from 211019padme-fw #10 
+#minimum height of a signal for it to be considered by TSpectrum. Isn't this a second order ZSup?
+AmplThrHigh			8#Beth 21/2/22, copied from 211019padme-fw #20 
 UsePulseProcessing		0
-ChannelEqualisation		0
+ChannelEqualisation		1
 DerivPoints			15
 PeakSearchWidth			5
 ZeroSuppression			5#Beth 21/3/22 added
+DerivAmpToEnergy		0.046 #Beth 25/3/22 added, = 1.6MeV mpv hit energy/35 normalised mpv deriv amplitude
 
 [TimeCalibration]
 Common_t0  37.24
