Copied new PVeto digitizing framework to EVeto

--- a/PadmeReco/config/EVeto.cfg
+++ b/PadmeReco/config/EVeto.cfg
@@ -16,19 +16,33 @@ TimeBin		0.4
 InputImpedance	50
 VoltageBin	0.000244
 
-[RECO]
-SignalWindow       		150
-SignalPreSamples		30
-SignalPostSamples		120
-PedestalOffset     		50
-NumberOfSamplesPedestal		50
-#Multihit [0- SingleHit, 1- Multihit with TSpectrum]
-Multihit			1
-#MinAmplitude			40
-MinAmplitude			20
-AmplThrLow			10
-AmplThrHigh			20
+[RECO]#Changed by Beth 29/3/22 to make EVeto reconstruction similar to PVeto
+
+NumberOfSamplesPedestal		150#Beth 24/2/22 copied from ClacPedestal method in 211019padme-fw. Is it a good number?
+#AmpThrLow is the minimum peak height allowed for a hit
+AmplThrLow			8#Beth 21/2/22, copied from 211019padme-fw #10 
+#minimum height of a signal for it to be considered by TSpectrum. Isn't this a second order ZSup?
+AmplThrHigh			8#Beth 21/2/22, copied from 211019padme-fw #20 
 UsePulseProcessing		0
+ChannelEqualisation		1
+DerivPoints			15
+PeakSearchWidth			5
+ZeroSuppression			5#Beth 21/3/22 added
+DerivAmpToEnergy		0.046 #Beth 25/3/22 added, = 1.6MeV mpv hit energy/35 normalised mpv deriv amplitude
+
+#commented by Beth 29/3/22 to make EVeto reconstruction similar to PVeto
+#SignalWindow       		150
+#SignalPreSamples		30
+#SignalPostSamples		120
+#PedestalOffset     		50
+#NumberOfSamplesPedestal		50
+##Multihit [0- SingleHit, 1- Multihit with TSpectrum]
+#Multihit			1
+##MinAmplitude			40
+#MinAmplitude			20
+#AmplThrLow			10
+#AmplThrHigh			20
+#UsePulseProcessing		0
 
 
 [RECOCLUSTER]
