Added EVeto gain equalisation constants

--- a/PadmeReco/config/EVeto.cfg
+++ b/PadmeReco/config/EVeto.cfg
@@ -24,7 +24,8 @@ AmplThrLow			8#Beth 21/2/22, copied from 211019padme-fw #10
 #minimum height of a signal for it to be considered by TSpectrum. Isn't this a second order ZSup?
 AmplThrHigh			8#Beth 21/2/22, copied from 211019padme-fw #20 
 UsePulseProcessing		0
-ChannelEqualisation		1
+ChannelEqualisation		0
+TailCorrection			0
 DerivPoints			15
 PeakSearchWidth			5
 ZeroSuppression			5#Beth 21/3/22 added
