New Veto digitizers, with modified VetoReconstruction to support them

--- a/PadmeReco/config.template/EVeto.cfg
+++ b/PadmeReco/config.template/EVeto.cfg
@@ -17,23 +17,28 @@ InputImpedance	50
 VoltageBin	0.000244
 
 [RECO]
-SignalWindow       		150
-SignalPreSamples		30
-SignalPostSamples		120
-PedestalOffset     		50
-NumberOfSamplesPedestal		50
+#SignalWindow                   151
+#SignalPreSamples               30
+#SignalPostSamples              120
+#PedestalOffset     		50
+NumberOfSamplesPedestal		150#Beth 7/4/22 - Is it a good number?
 #Multihit [0- SingleHit, 1- Multihit with TSpectrum]
-Multihit			1
-#MinAmplitude			40
-MinAmplitude			20
-#AmplThrLow			10
-#AmplThrHigh			20
-AmplThrLow			6
-AmplThrHigh			6
+#Multihit			1
+#MinAmplitude			20 #Beth 7/4/22 commented because not used - neither in RecoBase/src/DigitizerChannelReco.cc nor in PVeto/src/DigitizerChannelPVeto.cc 
+#AmpThrLow is the minimum peak height allowed for a hit
+AmplThrLow			8
+#AmpThrHigh is the minimum height of a signal for it to be considered by TSpectrum.
+AmplThrHigh			8
 UsePulseProcessing		0
 SigmaNoiseForMC                 0.4
 DigitizationTimeWindowForMC    17.0
-
+#Following variables added by Beth 7/4/22:
+ChannelEqualisation		1
+TailCorrection			1
+DerivPoints			15
+PeakSearchWidth			5
+ZeroSuppression			5#Beth 21/3/22 added
+DerivAmpToEnergy		0.046 #Beth 25/3/22 added, = 1.6MeV mpv hit energy/35 normalised mpv deriv amplitude
 
 [RECOCLUSTER]
 #ClusterDeltaTimeMax            5.
