--- a/PadmeReco/config.template/ECal.cfg
+++ b/PadmeReco/config.template/ECal.cfg
@@ -102,8 +102,8 @@ Common_t0MC  -1.45
 
 [GEOMETRY]
 ComputeFromPrimaryNumbers 1
-LocalOrigineX    0.
-LocalOrigineY    0.
+LocalOrigineX    3.13
+LocalOrigineY    3.86
 #LocalOrigineZ   2300. 
 #LocalOrigineZ    2440. 
 LocalOrigineZ    2555. 
