Introduced ETag Detector for 2022 setup LAV removed

--- a/PadmeMC/ETag/GNUmakefile
+++ b/PadmeMC/ETag/GNUmakefile
@@ -7,7 +7,7 @@
 # Created by Emanuele Leonardi (emanuele.leonardi@roma1.infn.it) 2015-12-14
 # --------------------------------------------------------------
 
-name := LAV
+name := ETag
 G4TARGET := PADMEMC
 G4EXLIB := true
 
