PaadmeMC: removed last tracks of LAV and removed Constants.hh where not needed

--- a/PadmeMC/ETag/GNUmakefile
+++ b/PadmeMC/ETag/GNUmakefile
@@ -1,5 +1,5 @@
 # --------------------------------------------------------------
-# GNUmakefile for LAV library
+# GNUmakefile for ETag library
 # --------------------------------------------------------------
 # --------------------------------------------------------------
 # History:
