PadmeReco: added ETag; PadmeeRoot: added ETag reco persistency

--- a/PadmeReco/GNUmakefile
+++ b/PadmeReco/GNUmakefile
@@ -2,7 +2,7 @@
 
 NAME := PadmeReco
 
-SUBDIRS := Target EVeto PVeto HEPVeto ECal SAC TPix
+SUBDIRS := Target EVeto PVeto HEPVeto ECal SAC TPix ETag
 #ALLTARGETDIRS := $(SUBDIRS) RecoBase EventDisplay Service
 ALLTARGETDIRS := $(SUBDIRS) RecoBase
 
