--- a/PadmeReco/config.template/PadmeReconstruction.cfg
+++ b/PadmeReco/config.template/PadmeReconstruction.cfg
@@ -1,6 +1,7 @@
 [RECOALGORITHMS]
 ECal    1
 SAC     1
+ETag    1
 PVeto	1
 EVeto   1
 HEPVeto 1
@@ -10,6 +11,7 @@ Target  1
 [RECOOutput]
 ECal    1
 SAC     1
+Etag    1
 PVeto	1
 EVeto   1
 HEPVeto 1
@@ -28,6 +30,7 @@ Debug       0
 [RECOCONFIG]
 ECal    config/ECal.cfg
 SAC     config/SAC.cfg
+ETag    config/ETag.cfg
 PVeto	config/PVeto.cfg
 EVeto   config/EVeto.cfg
 HEPVeto config/HEPVeto.cfg
