Added Analysis classes for Veto processes

--- a/PadmeReco/config/PVeto.cfg
+++ b/PadmeReco/config/PVeto.cfg
@@ -36,6 +36,7 @@ DerivAmpToEnergy		0.046 #Beth 25/3/22 added, = 1.6MeV mpv hit energy/35 normalis
 
 [RECOCLUSTER]
 #ClusterDeltaTimeMax            5.
+ClusterisationAlgorithm		1 #0 is virtual clusterisation, 1 is new algorithm
 ClusterDeltaTimeMax            4.
 ClusterDeltaCellMax            2
 #ClusterEnergyThresholdForHit   2.
