OnlineMonitor: added ETag structure

--- a/OnlineMonitor/config.template/OnlineMonitor.cfg
+++ b/OnlineMonitor/config.template/OnlineMonitor.cfg
@@ -3,6 +3,7 @@ Target  config/Target.cfg
 ADC     config/ADC.cfg
 Trigger config/Trigger.cfg
 ECal    config/ECal.cfg
+ETag    config/ETag.cfg
 SAC     config/SAC.cfg
 PVeto   config/PVeto.cfg
 EVeto   config/EVeto.cfg
@@ -11,9 +12,10 @@ HEPVeto config/HEPVeto.cfg
 [ANALYZE]
 Trigger 1
 ADC     1
-Target  0
-ECal    0
-SAC     1
+Target  1
+ECal    1
+ETag    1
+SAC     0
 PVeto   0
 EVeto   0
 HEPVeto 0
