Fixed bug for new clusterisation in PVeto: there wasn't the flag in the config file that the clusterisation relied on in PVetoReconstruction.cc

--- a/PadmeReco/config/PVeto.cfg
+++ b/PadmeReco/config/PVeto.cfg
@@ -3,6 +3,7 @@ NAME         PVeto
 NCHANNELS    96
 READOUT      ADC
 
+
 [ADC]
 NADC  3
 ID    10 11 12
@@ -10,25 +11,24 @@ ID    10 11 12
 ADC10 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
 ADC11 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
 ADC12 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 
-
 #Note the following variables should be equavalent for all the ADCs of a given detector
 TimeBin		0.4
 InputImpedance	50
 VoltageBin	0.000244
 
 [RECO]
-NumberOfSamplesPedestal		150#Beth 7/4/22 - Is it a good number?
+NumberOfSamplesPedestal		50
 #AmpThrLow is the minimum peak height allowed for a hit
-AmplThrLow			8
+AmplThrLow			6 #changed from 6 to 8 by Beth 21/9/22 to be identical to EVeto
 #AmpThrHigh is the minimum height of a signal for it to be considered by TSpectrum.
-AmplThrHigh			8
+AmplThrHig			6 #changed from 6 to 8 by Beth 21/9/22 to be identical to EVeto
 UsePulseProcessing		0
 SigmaNoiseForMC                 0.4
 DigitizationTimeWindowForMC    17.0
-#Following variables added by Beth 7/4/22:
+#Following variables added by Beth 21/9/22, copied from EVeto.cfg edited 7/4/22:
 ChannelEqualisation		1
-TailCorrection			1
-TimeCorrection			0
+TailCorrection			0
+TimeCorrection			1
 DerivPoints			15
 PeakSearchWidth			5
 ZeroSuppression			5#Beth 21/3/22 added
@@ -36,7 +36,6 @@ DerivAmpToEnergy		0.046 #Beth 25/3/22 added, = 1.6MeV mpv hit energy/35 normalis
 
 [RECOCLUSTER]
 #ClusterDeltaTimeMax            5.
-ClusterisationAlgorithm		1 #0 is virtual clusterisation, 1 is new algorithm
 ClusterDeltaTimeMax            4.
 ClusterDeltaCellMax            2
 #ClusterEnergyThresholdForHit   2.
@@ -46,15 +45,16 @@ ClusterEnergyThresholdForSeed  0.1
 ClusterTLowForHit              -300.#changed from -100 Beth 28/4/22
 #ClusterTHighForHit              180.
 ClusterTHighForHit              300.
+ClusterAlgo			1 #0 = virtual clusterisation (but it won't work atm (23/9/22)), 1 = new cannibalistic clusterisation
 
 [Output]
 Hits            1
 Clusters        1
-Analog		0
+SaveAnalogs	0
 TotalAnalogs	100
 
 [TimeCalibration]
-CalibrationFile	    1
+CalibrationFile		1
 #Common_t0  37.24
 #t0_0 -2.35925
 #t0_1 -2.30022
@@ -239,104 +239,100 @@ CalibrationFile	    1
 #t0_87 -5.8411
 #t0_88 -6.11007
 #t0_89 -5.8455
-
-t0MC_0	-11.2851
-t0MC_1	-11.2611
-t0MC_2	-11.2398
-t0MC_3	-11.2405
-t0MC_4	-11.2438
-t0MC_5	-11.2288
-t0MC_6	-11.221
-t0MC_7	-11.2278
-t0MC_8	-11.2232
-t0MC_9	-11.2312
-t0MC_10	-11.243
-t0MC_11	-11.2173
-t0MC_12	-11.1854
-t0MC_13	-10.8579
-t0MC_14	-10.8331
-t0MC_15	-10.7979
-t0MC_16	-10.7822
-t0MC_17	-10.771
-t0MC_18	-10.7501
-t0MC_19	-10.7334
-t0MC_20	-10.7323
-t0MC_21	-10.7203
-t0MC_22	-10.7206
-t0MC_23	-10.7263
-t0MC_24	-10.722
-t0MC_25	-10.7247
-t0MC_26	-10.6985
-t0MC_27	-10.6539
-t0MC_28	-10.3904
-t0MC_29	-10.3651
-t0MC_30	-10.3336
-t0MC_31	-10.3071
-t0MC_32	-10.281
-t0MC_33	-10.2591
-t0MC_34	-10.2428
-t0MC_35	-10.2236
-t0MC_36	-10.2117
-t0MC_37	-10.2122
-t0MC_38	-10.2089
-t0MC_39	-10.2048
-t0MC_40	-10.1855
-t0MC_41	-10.1351
-t0MC_42	-10.0721
-t0MC_43	-9.92566
-t0MC_44	-9.88869
-t0MC_45	-9.85541
-t0MC_46	-9.82251
-t0MC_47	-9.78687
-t0MC_48	-9.767
-t0MC_49	-9.75742
-t0MC_50	-9.74996
-t0MC_51	-9.74124
-t0MC_52	-9.73377
-t0MC_53	-9.72275
-t0MC_54	-9.66685
-t0MC_55	-9.60124
-t0MC_56	-9.54094
-t0MC_57	-9.45009
-t0MC_58	-9.41204
-t0MC_59	-9.37711
-t0MC_60	-9.29491
-t0MC_61	-9.2783
-t0MC_62	-9.26523
-t0MC_63	-9.25509
-t0MC_64	-9.24662
-t0MC_65	-9.23878
-t0MC_66	-9.23096
-t0MC_67	-9.21851
-t0MC_68	-9.14653
-t0MC_69	-9.08211
-t0MC_70	-8.97168
-t0MC_71	-8.88936
-t0MC_72	-8.81954
-t0MC_73	-8.78099
-t0MC_74	-8.75768
-t0MC_75	-8.74457
-t0MC_76	-8.73246
-t0MC_77	-8.72343
-t0MC_78	-8.71862
-t0MC_79	-8.71677
-t0MC_80	-8.72236
-t0MC_81	-8.72322
-t0MC_82	-8.69653
-t0MC_83	-8.65476
-t0MC_84	-8.33042
-t0MC_85	-8.30156
-t0MC_86	-8.28066
-t0MC_87	-8.26428
-t0MC_88	-8.24944
-t0MC_89	-8.24165
+#t0MC_0	 -8.91274
+#t0MC_1	 -8.89273
+#t0MC_2	 -8.92261
+#t0MC_3	 -8.94871
+#t0MC_4	 -8.93862
+#t0MC_5	 -11.1003
+#t0MC_6	 -11.1019
+#t0MC_7	 -11.1414
+#t0MC_8	 -11.1168
+#t0MC_9	 -11.0844
+#t0MC_10	 -11.1021
+#t0MC_11	 -11.1021
+#t0MC_12	 -11.0502
+#t0MC_13	 -11.0545
+#t0MC_14	 -10.945 
+#t0MC_15	 -10.9066
+#t0MC_16	 -10.8557
+#t0MC_17	 -10.8641
+#t0MC_18	 -10.8357
+#t0MC_19	 -10.812 
+#t0MC_20	 -10.7832
+#t0MC_21	 -10.7229
+#t0MC_22	 -10.6782
+#t0MC_23	 -10.6512
+#t0MC_24	 -10.6177
+#t0MC_25	 -10.595 
+#t0MC_26	 -10.5855
+#t0MC_27	 -10.5563
+#t0MC_28	 -10.4916
+#t0MC_29	 -10.4425
+#t0MC_30	 -10.4027
+#t0MC_31	 -10.3746
+#t0MC_32	 -10.3445
+#t0MC_33	 -10.3173
+#t0MC_34	 -10.2927
+#t0MC_35	 -10.2391
+#t0MC_36	 -10.1791
+#t0MC_37	 -10.1418
+#t0MC_38	 -10.1217
+#t0MC_39	 -10.087 
+#t0MC_40	 -10.0543
+#t0MC_41	 -10.0513
+#t0MC_42	 -9.98884
+#t0MC_43	 -9.92591
+#t0MC_44	 -9.88878
+#t0MC_45	 -9.86874
+#t0MC_46	 -9.84805
+#t0MC_47	 -9.83194
+#t0MC_48	 -9.80809
+#t0MC_49	 -9.73396
+#t0MC_50	 -9.66964
+#t0MC_51	 -9.63408
+#t0MC_52	 -9.61219
+#t0MC_53	 -9.58999
+#t0MC_54	 -9.5783 
+#t0MC_55	 -9.55409
+#t0MC_56	 -9.48284
+#t0MC_57	 -9.42975
+#t0MC_58	 -9.39483
+#t0MC_59	 -9.36988
+#t0MC_60	 -9.35611
+#t0MC_61	 -9.33949
+#t0MC_62	 -9.31158
+#t0MC_63	 -9.25212
+#t0MC_64	 -9.18667
+#t0MC_65	 -9.16004
+#t0MC_66	 -9.13784
+#t0MC_67	 -9.12447
+#t0MC_68	 -9.10723
+#t0MC_69	 -9.07297
+#t0MC_70	 -9.01087
+#t0MC_71	 -8.95232
+#t0MC_72	 -8.89473
+#t0MC_73	 -8.91574
+#t0MC_74	 -8.89456
+#t0MC_75	 -8.86581
+#t0MC_76	 -8.82364
+#t0MC_77	 -8.77643
+#t0MC_78	 -8.70814
+#t0MC_79	 -8.68591
+#t0MC_80	 -8.66827
+#t0MC_81	 -8.66056
+#t0MC_82	 -8.60654
+#t0MC_83	 -8.54377
+#t0MC_84	 -8.51127
+#t0MC_85	 -8.47868
+#t0MC_86	 -8.44384
+#t0MC_87	 -8.4045 
+#t0MC_88	 -8.37656
+#t0MC_89	 -8.28027
 
 [EnergyCalibration]
 Common_EnergyScale 1.
-CalibrationFile 2 #Beth 8/4/22: CalibrationFile 2 corresponds to PVeto_EnergyCalibration_DerivativeDigitizer2020.txt
-
-[ChargeCalibration]
-
+CalibrationFile 2
 
 [GEOMETRY]
 ComputeFromPrimaryNumbers 1
