--- a/PadmeReco/config/EVeto.cfg
+++ b/PadmeReco/config/EVeto.cfg
@@ -28,7 +28,7 @@ DigitizationTimeWindowForMC    17.0
 #Following variables added by Beth 7/4/22:
 ChannelEqualisation		1
 TailCorrection			0
-TimeCorrection			0
+TimeCorrection			1
 DerivPoints			15
 PeakSearchWidth			5
 ZeroSuppression			5#Beth 21/3/22 added
@@ -49,109 +49,109 @@ ClusterTHighForHit              300.
 [Output]
 Hits            1
 Clusters        1
-Analog		0
+SaveAnalogs	0
 TotalAnalogs	100
 
 [TimeCalibration]
 CalibrationFile	    1
 #Common_t0 34.84
-Common_t0MC -10.17
-t0_0 	  -2.15474
-t0_1 	  -1.84043
-t0_2 	  -1.70695
-t0_3 	  -1.39703
-t0_4 	  -1.29222
-t0_5 	  -1.44952
-t0_6 	  -1.43158
-t0_7 	  -1.78457
-t0_8 	  -0.937129
-t0_9 	  -1.19387
-t0_10	  -0.960213
-t0_11	  -0.4534
-t0_12	  -1.12316
-t0_13	  -0.851794
-t0_14	  -0.229754
-t0_15	  -0.952195
-t0_16	  -1.19228
-t0_17	  -0.843641
-t0_18	  -1.54396
-t0_19	  -1.71283
-t0_20	  -1.48941
-t0_21	  -1.25107
-t0_22	  -1.5474
-t0_23	  -0.581602
-t0_24	  -0.381366
-t0_25	  -0.515135
-t0_26	  -0.553725
-t0_27	  -1.9694
-t0_28	  -1.10349
-t0_29	  -0.789768
-t0_30	  -0.909409
-t0_31	  -0.902933
-t0_32	  -0.863843
-t0_33	  -0.40167
-t0_34	  -1.03776
-t0_35	  -1.14387
-t0_36	  -0.527679
-t0_37	  -0.104627
-t0_38	  -0.820872
-t0_39	  -0.802098
-t0_40	  0.543783
-t0_41	  -0.231449
-t0_42	  -0.578554
-t0_43	  -0.295767
-t0_44	  -0.438741
-t0_45	  -0.069515
-t0_46	  -0.368321
-t0_47	  -0.783732
-t0_48	  -3.45447
-t0_49	  -1.98513
-t0_50	  -2.84796
-t0_51	  -3.13874
-t0_52	  -1.71728
-t0_53	  -3.17631
-t0_54	  -2.82198
-t0_55	  -2.4151
-t0_56	  -1.32653
-t0_57	  -1.5291
-t0_58	  -1.35257
-t0_59	  -1.3191
-t0_60	  -1.62546
-t0_61	  -1.67947
-t0_62	  -2.46544
-t0_63	  -1.92098
-t0_64	  -1.55768
-t0_65	  -2.73212
-t0_66	  -2.15255
-t0_67	  -3.00122
-t0_68	  -1.858
-t0_69	  -2.04768
-t0_70	  -2.30348
-t0_71	  -2.20931
-t0_72	  -1.39584
-t0_73	  -1.24628
-t0_74	  -1.48777
-t0_75	  -1.55949
-t0_76	  -1.08651
-t0_77	  1.25932
-t0_78	  0.06298
-t0_79	  2.04737
-t0_80	  2.04737
-t0_81	  2.04737
-t0_82	  2.04737
-t0_83	  2.04737
-t0_84	  2.04737
-t0_85	  2.04737
-t0_86	  2.04737
-t0_87	  2.04737
-t0_88	  2.04737
-t0_89	  2.04737
-t0_90	  2.04737
-t0_91	  2.04737
-t0_92	  2.04737
-t0_93	  2.04737
-t0_94	  2.04737
-t0_95	  2.04737   
+#Common_t0MC -10.17
+#t0_0 	  -2.15474
+#t0_1 	  -1.84043
+#t0_2 	  -1.70695
+#t0_3 	  -1.39703
+#t0_4 	  -1.29222
+#t0_5 	  -1.44952
+#t0_6 	  -1.43158
+#t0_7 	  -1.78457
+#t0_8 	  -0.937129
+#t0_9 	  -1.19387
+#t0_10	  -0.960213
+#t0_11	  -0.4534
+#t0_12	  -1.12316
+#t0_13	  -0.851794
+#t0_14	  -0.229754
+#t0_15	  -0.952195
+#t0_16	  -1.19228
+#t0_17	  -0.843641
+#t0_18	  -1.54396
+#t0_19	  -1.71283
+#t0_20	  -1.48941
+#t0_21	  -1.25107
+#t0_22	  -1.5474
+#t0_23	  -0.581602
+#t0_24	  -0.381366
+#t0_25	  -0.515135
+#t0_26	  -0.553725
+#t0_27	  -1.9694
+#t0_28	  -1.10349
+#t0_29	  -0.789768
+#t0_30	  -0.909409
+#t0_31	  -0.902933
+#t0_32	  -0.863843
+#t0_33	  -0.40167
+#t0_34	  -1.03776
+#t0_35	  -1.14387
+#t0_36	  -0.527679
+#t0_37	  -0.104627
+#t0_38	  -0.820872
+#t0_39	  -0.802098
+#t0_40	  0.543783
+#t0_41	  -0.231449
+#t0_42	  -0.578554
+#t0_43	  -0.295767
+#t0_44	  -0.438741
+#t0_45	  -0.069515
+#t0_46	  -0.368321
+#t0_47	  -0.783732
+#t0_48	  -3.45447
+#t0_49	  -1.98513
+#t0_50	  -2.84796
+#t0_51	  -3.13874
+#t0_52	  -1.71728
+#t0_53	  -3.17631
+#t0_54	  -2.82198
+#t0_55	  -2.4151
+#t0_56	  -1.32653
+#t0_57	  -1.5291
+#t0_58	  -1.35257
+#t0_59	  -1.3191
+#t0_60	  -1.62546
+#t0_61	  -1.67947
+#t0_62	  -2.46544
+#t0_63	  -1.92098
+#t0_64	  -1.55768
+#t0_65	  -2.73212
+#t0_66	  -2.15255
+#t0_67	  -3.00122
+#t0_68	  -1.858
+#t0_69	  -2.04768
+#t0_70	  -2.30348
+#t0_71	  -2.20931
+#t0_72	  -1.39584
+#t0_73	  -1.24628
+#t0_74	  -1.48777
+#t0_75	  -1.55949
+#t0_76	  -1.08651
+#t0_77	  1.25932
+#t0_78	  0.06298
+#t0_79	  2.04737
+#t0_80	  2.04737
+#t0_81	  2.04737
+#t0_82	  2.04737
+#t0_83	  2.04737
+#t0_84	  2.04737
+#t0_85	  2.04737
+#t0_86	  2.04737
+#t0_87	  2.04737
+#t0_88	  2.04737
+#t0_89	  2.04737
+#t0_90	  2.04737
+#t0_91	  2.04737
+#t0_92	  2.04737
+#t0_93	  2.04737
+#t0_94	  2.04737
+#t0_95	  2.04737   
 
 
 [EnergyCalibration]
