Fixed bug for new clusterisation in PVeto: there wasn't the flag in the config file that the clusterisation relied on in PVetoReconstruction.cc

--- a/PadmeReco/config/EVeto.cfg
+++ b/PadmeReco/config/EVeto.cfg
@@ -27,7 +27,7 @@ SigmaNoiseForMC                 0.4
 DigitizationTimeWindowForMC    17.0
 #Following variables added by Beth 7/4/22:
 ChannelEqualisation		1
-TailCorrection			1
+TailCorrection			0
 TimeCorrection			1
 DerivPoints			15
 PeakSearchWidth			5
@@ -49,7 +49,7 @@ ClusterTHighForHit              300.
 [Output]
 Hits            1
 Clusters        1
-Analog		0
+SaveAnalogs	0
 TotalAnalogs	100
 
 [TimeCalibration]
