Removed hardcoded thresholds for TSpectrum

--- a/PadmeReco/config/PVeto.cfg
+++ b/PadmeReco/config/PVeto.cfg
@@ -19,9 +19,9 @@ VoltageBin	0.000244
 [RECO]
 NumberOfSamplesPedestal		50
 #AmpThrLow is the minimum peak height allowed for a hit
-AmplThrLow			6 #changed from 6 to 8 by Beth 21/9/22 to be identical to EVeto
+AmplThrLow			8 #changed from 6 to 8 by Beth 21/9/22 to be identical to EVeto - previously this was hard-coded before TSpectrum
 #AmpThrHigh is the minimum height of a signal for it to be considered by TSpectrum.
-AmplThrHig			6 #changed from 6 to 8 by Beth 21/9/22 to be identical to EVeto
+AmplThrHig			8 #changed from 6 to 8 by Beth 21/9/22 to be identical to EVeto - previously this was hard-coded before TSpectrum
 UsePulseProcessing		0
 SigmaNoiseForMC                 0.4
 DigitizationTimeWindowForMC    17.0
