--- a/PadmeReco/config/PVeto.cfg
+++ b/PadmeReco/config/PVeto.cfg
@@ -54,7 +54,7 @@ SaveAnalogs	0
 TotalAnalogs	100
 
 [TimeCalibration]
-CalibrationFile		1
+CalibrationFile		2  #Beth 26/9/22 1 = point by point T0s from cables & detector effects for 2020 data Calibration/PVeto_TimeCalibration_DerivativeDigitizer2020.txt, 2 = hardcoded cable/detector effects averaged over all channels which use the same cables
 #Common_t0  37.24
 #t0_0 -2.35925
 #t0_1 -2.30022
