--- a/PadmeMC/vis.mac.example
+++ b/PadmeMC/vis.mac.example
@@ -263,16 +263,16 @@
 /run/initialize
 
 # Use this open statement to create an OpenGL view:
-/vis/open OGL 600x600-0+0
+#/vis/open OGL 600x600-0+0
 
 # Use this open statement to create a .prim file suitable for viewing in DAWN:
 #/vis/open DAWNFILE
 
 # Use this open statement to create a .heprep file suitable for viewing in HepRApp:
-#/vis/open HepRepFile
-#/vis/open HepRepXML
-#/vis/heprep/setEventNumberSuffix -0001
-#/vis/scene/add/trajectories rich
+/vis/open HepRepFile
+/vis/open HepRepXML
+/vis/heprep/setEventNumberSuffix -0001
+/vis/scene/add/trajectories rich
 
 # Use this open statement to create a .wrl file suitable for
 # viewing in a VRML viewer:
