OnlineMonitor: added LeadGlass monitor

--- a/OnlineMonitor/config.template/OnlineMonitor.cfg
+++ b/OnlineMonitor/config.template/OnlineMonitor.cfg
@@ -1,23 +1,25 @@
 [CONFIGFILE]
-Target  config/Target.cfg
-ADC     config/ADC.cfg
-Trigger config/Trigger.cfg
-ECal    config/ECal.cfg
-ETag    config/ETag.cfg
-SAC     config/SAC.cfg
-PVeto   config/PVeto.cfg
-EVeto   config/EVeto.cfg
-HEPVeto config/HEPVeto.cfg
+Target    config/Target.cfg
+LeadGlass config/LeadGlass.cfg
+ADC       config/ADC.cfg
+Trigger   config/Trigger.cfg
+ECal      config/ECal.cfg
+ETag      config/ETag.cfg
+SAC       config/SAC.cfg
+PVeto     config/PVeto.cfg
+EVeto     config/EVeto.cfg
+HEPVeto   config/HEPVeto.cfg
 
 [ANALYZE]
-Trigger 1
-ADC     1
-Target  1
-ECal    1
-ETag    1
-SAC     0
-PVeto   0
-EVeto   0
-HEPVeto 0
-TPix    0
-Mimosa  0
+Trigger   1
+ADC       1
+Target    1
+LeadGlass 1
+ECal      1
+ETag      1
+SAC       0
+PVeto     0
+EVeto     0
+HEPVeto   1
+TPix      0
+Mimosa    0
