OnlineMonitor: added ECal energy maps for Beam events

--- a/OnlineMonitor/config.template/ECal.cfg
+++ b/OnlineMonitor/config.template/ECal.cfg
@@ -31,3 +31,8 @@ ADC23    1324   525   625   725   825   925  1025  1125  1225  1325  1425   726 
 
 [RECO]
 CosmicsCalibrationFile config/ECalEnergyCalibration_6.dat
+
+BeamOutputRate     500
+OffBeamOutputRate    0
+CosmicsOutputRate  100
+RandomOutputRate     0
