--- a/OnlineMonitor/config.template/ETag.cfg
+++ b/OnlineMonitor/config.template/ETag.cfg
@@ -14,3 +14,7 @@ ADC24   3    2    1    0  103  102  101  100  203  202  201  200  303  302  301 
 ADC25 803  802  801  800  903  902  901  900 1003 1002 1001 1000 1103 1102 1101 1100 1203 1202 1201 1200 1303 1302 1301 1300 1403 1402 1401 1400   -1   -1   -1   -1
 
 [RECO]
+BeamOutputRate    0
+OffBeamOutputRate 0
+CosmicsOutputRate 0
+RandomOutputRate  0
