--- a/OnlineMonitor/config.template/LeadGlass.cfg
+++ b/OnlineMonitor/config.template/LeadGlass.cfg
@@ -20,6 +20,10 @@ PedestalSamples    100
 SignalSamplesStart 200
 SignalSamplesEnd   600
 
-ChargeToNPoTs 0.239
+# Value for HV=650V and Ebeam=300MeV
+#ChargeToNPoTs 0.23777
+# Value for HV=650V and Ebeam=285MeV
+ChargeToNPoT 0.22588
+
 NPoTsRangeMin 2000.
-NPoTsRangeMax 4000.
+NPoTsRangeMax 3000.
