OnlineMonitor: added LeadGlass bunch length plots

--- a/OnlineMonitor/config.template/LeadGlass.cfg
+++ b/OnlineMonitor/config.template/LeadGlass.cfg
@@ -27,3 +27,7 @@ ChargeToNPoT 0.22588
 
 NPoTsRangeMin 2000.
 NPoTsRangeMax 3000.
+
+BunchLengthThreshold 50.
+BunchLengthRangeMin 100.
+BunchLengthRangeMax 300.
