OnlineMonitor: added cumulative npots plot to LeadGlass

--- a/OnlineMonitor/config.template/LeadGlass.cfg
+++ b/OnlineMonitor/config.template/LeadGlass.cfg
@@ -25,6 +25,9 @@ SignalSamplesEnd   600
 # Value for HV=650V and Ebeam=285MeV
 ChargeToNPoT 0.22588
 
+# 1 stream over 5
+StreamsFactor 5.
+
 NPoTsRangeMin 2000.
 NPoTsRangeMax 3000.
 
