OnlineMonitor: added ECal total energy plot and trend, small fixes

--- a/OnlineMonitor/config.template/ECal.cfg
+++ b/OnlineMonitor/config.template/ECal.cfg
@@ -30,7 +30,7 @@ ADC22     322   422   522   622   722   822   922  1022  1122  1222  1322   323 
 ADC23    1324   525   625   725   825   925  1025  1125  1225  1325  1425   726   826   926  1026  1126  1226  1326   927  1027  1127  1227  1327  1427  1228  1328    -1    -1    -1    -1    -1    -1
 
 [RECO]
-CosmicsCalibrationFile config/ECalEnergyCalibration_6.dat
+CalibrationFile config/ECalEnergyCalibration_6.dat
 
 BeamOutputRate     500
 OffBeamOutputRate    0
